--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ body {
 .nft-card {
   overflow: hidden;
   border-width: 1px;
-  border-color: #ff3b46;
+  border-color: #A89E9A;
   background-color: transparent;
   border-radius: 2px;
   margin-top: 20px;
@@ -69,7 +69,7 @@ body {
 
 .nft-button {
   border: 0;
-  width: 120px;
+  width: 150px;
   font-size: 10px;
   border-radius: 3px;
   padding: 5px;
@@ -80,8 +80,8 @@ body {
 }
 
 .nft-button:hover {
-  background: #ff3b46;
-  border-color: #ff3b46;
+  background: #A89E9A;
+  border-color: #A89E9A;
   color: white !important;
 }
 
@@ -120,17 +120,18 @@ body {
 }
 
 .btn-claim {
-  border: solid 1px #ff3b46;
+  border: solid 1px #A89E9A;
   border-radius: 3px;
   text-transform: uppercase;
   /* height: 100%; */
   font-family: "Saira", sans-serif;
-  color: #ff3b46;
+  color: #A89E9A;
+  font-size:20px;
 }
 
 .btn-claim:hover {
-  background: #ff3b46;
-  border-color: #ff3b46;
+  background: #A89E9A;
+  border-color: #A89E9A;
   color: white;
 }
 
@@ -147,12 +148,13 @@ body {
 }
 
 .pendding-rewards {
-  color: #ff3b46;
+  color: #A89E9A;
   text-align: left;
   text-transform: uppercase;
   margin-right: 20px;
   font-family: Common Pixel, sans-serif;
   font-weight: 300;
+  font-size: 20px;
 }
 
 #loading {
@@ -283,9 +285,9 @@ iframe[style*="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; 
 }
 
 .modal-header {
-  border-color: #ff3b46;
+  border-color: #A89E9A;
 }
 
 .btn-close {
-  color: #ff3b46;
+  color: #A89E9A;
 }
